code/src/objects/Project_Timesheet__c.object
<CustomObject>
    <description>Time sheet generated for this project for each user working on the project</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Time sheet End Date</description>
        <inlineHelpText>Time sheet End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>Total cost incurred this week</description>
        <inlineHelpText>Total cost incurred this week</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether time sheet is approved or not</description>
        <inlineHelpText>Whether time sheet is approved or not</inlineHelpText>
        <label>IsApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project related to this timesheet</description>
        <inlineHelpText>Project related to this timesheet</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Time sheet start date</description>
        <inlineHelpText>Time sheet start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timesheet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of this time sheet. It is actually a project manager.</description>
        <inlineHelpText>Manager of this time sheet. It is actually a project manager.</inlineHelpText>
        <label>Timesheet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_time__c</fullName>
        <description>Total time spent by people this week on this project.</description>
        <inlineHelpText>Total time spent by people this week on this project.</inlineHelpText>
        <label>Total time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Total_time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsApproved__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Timesheet_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TW_MemberCantEditTimesheetAfterApproval</fullName>
        <active>true</active>
        <description>Only manager can unlock the time sheet after approval. Prevent other users from editi</description>
        <errorConditionFormula>AND(  ISCHANGED(IsApproved__c) , Timesheet_Manager__c != $User.Id , $Profile.Name !=&apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>You do not have permission to edit the time sheet</errorMessage>
    </validationRules>
</CustomObject>